add status endpoint
